# sre-devops-k8s

./: CHANGELOG.md  Dockerfile  README.md  main.py  package.json  pyproject.toml  requirements.txt
.github/workflows/: main.yml
argocd/: application.yaml
k8s/: deployment.yaml  hpa.yaml  namespace.yaml
src/: index.js
